africom essay contest

--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,13 @@
 
 
+
+a {
+    text-decoration: none;
+}
+
 footer {
     text-align: center;
     position: fixed;
     bottom: 0;
     width: 100%;
-}
-
-footer a {
-    text-decoration: none;
 }
