--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,15 @@
 
-
+html {
+    font-family: 'Lato', sans-serif;
+}
 
 a {
     text-decoration: none;
+    color: black;
+}
+
+div {
+    max-width: 50%;
 }
 
 footer {
